--- a/themes/beautifulhugo/layouts/_default/baseof.html
+++ b/themes/beautifulhugo/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     {{ partial "nav.html" . }}
     {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
     {{ block "main" . }}{{ end }}
-    {{- partial "footer.html" . -}}
+    {{ partial "footer.html" . }}
     {{ block "footer" . }}{{ end }}
   </body>
 </html>
